[tool.poetry]
name = "async-learning"
version = "0.1.0"
description = ""
authors = ["Airat Latypov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
asyncpg = "^0.29.0"
asyncio = "^3.4.3"
flask = "^3.0.3"
psycopg2 = "^2.9.9"
httpx = "^0.27.0"
numpy = "^2.0.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
